Add release optimizations and new widgets